cholera 0.6.5.9021
==================

- fix nearestPump(output = "path", dev.mode = TRUE).


cholera 0.6.5.9020
==================

- fix setting of number of logical cores in multiCore().


cholera 0.6.5.9019
==================

- use physical cores for Windows; logical cores macOS/unix.


cholera 0.6.5.9018
==================

- add parallel Windows prototype of landmarkData().


cholera 0.6.5.9017
==================

- add checkSegment() to parallel::clusterExport(varlist).


cholera 0.6.5.9016
==================

- amend peripheryCases() in addSnow().
- amend observedExpected() in pearsonResiduals().


cholera 0.6.5.9015
==================

- amend isoVertices().
- use non-parallel versions of peripheryCases() and travelingSalesman().
- amend plot.walking(), plot.euclidean(), addNeighborhoodEuclidean() and
  addNeighborhoodEuclidean)() for peripheryCases() and travelingSalesman().


cholera 0.6.5.9014
==================

- amend travelingSalesman().


cholera 0.6.5.9013
==================

- add parallel Windows version of addMilePosts().
- amend nearestPump().


cholera 0.6.5.9012
==================

- add parallel Windows prototype of addMilePosts().


cholera 0.6.5.9011
==================

- add parallel Windows prototype of nearestPump().


cholera 0.6.5.9010
==================

- add parallel Windows version of addNeighborhoodEuclidean().
- add parallel Windows version of addNeighborhoodWalking().
- use splitOutcomes() in neighborhoodWalking().


cholera 0.6.5.9009
==================

- add parallel Windows version of split.outcome object.
- add parallel Windows prototype for simulateFatalities().


cholera 0.6.5.9008
==================

- amend expectedCount() for summary.walking().


cholera 0.6.5.9007
==================

- amend observedExpected().
- add parallel Windows version of observedExpected().


cholera 0.6.5.9006
==================

- add travelingSalesman() parLapply() prototype.
- add parallel Windows version of neighborhoodEuclidean().